--- a/MaxShifts/MaxShiftsLab.csproj
+++ b/MaxShifts/MaxShiftsLab.csproj
@@ -3,7 +3,7 @@
   <PropertyGroup>
     <OutputType>Exe</OutputType>
     <TargetFramework>netcoreapp3.1</TargetFramework>
-    <AssemblyName>MaxShifts</AssemblyName>
+    <AssemblyName>MaxShiftsLab</AssemblyName>
     <RootNamespace>MaxShifts</RootNamespace>
   </PropertyGroup>
 
