--- a/tests/UnitTests/UnitTests.csproj
+++ b/tests/UnitTests/UnitTests.csproj
@@ -21,6 +21,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\..\LongestCommonSubsequenceLab\LongestCommonSubsequenceLab.csproj" />
+    <ProjectReference Include="..\..\LongestIncreasingSubsequenceLab\LongestIncreasingSubsequenceLab.csproj" />
     <ProjectReference Include="..\..\MaxShifts\MaxShiftsLab.csproj" />
     <ProjectReference Include="..\..\VaccineDevelopmentLab\VaccineDevelopmentLab.csproj" />
   </ItemGroup>
