--- a/Core/Fibonacci/FibonacciLab.csproj
+++ b/Core/Fibonacci/FibonacciLab.csproj
@@ -3,12 +3,10 @@
   <PropertyGroup>
     <OutputType>Exe</OutputType>
     <TargetFramework>netcoreapp3.1</TargetFramework>
-    <AssemblyName>MaxShiftsLab</AssemblyName>
-    <RootNamespace>MaxShifts</RootNamespace>
   </PropertyGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\Timer\Timer.csproj" />
+    <ProjectReference Include="..\..\Service\MyTimer\MyTimer.csproj" />
   </ItemGroup>
 
 </Project>
