--- a/Core/LongestIncreasingSubsequenceLab/LongestIncreasingSubsequenceLab.csproj
+++ b/Core/LongestIncreasingSubsequenceLab/LongestIncreasingSubsequenceLab.csproj
@@ -8,7 +8,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\Timer\Timer.csproj" />
+    <ProjectReference Include="..\..\Service\MyTimer\MyTimer.csproj" />
   </ItemGroup>
 
 </Project>
